# RDKitStreaming

./: CMakeLists.txt  FindMyRDKit.cmake  concurrentqueue.h  example.txt  example1  example1.cpp
app/: CMakeLists.txt  example1.cpp
cmake/: FindMyRDKit.cmake
include/StreamingMoleculeReader/: parallelDatabase.h  rdkit_interface.h
